--- a/index.html
+++ b/index.html
@@ -5,15 +5,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Library</title>
     <link rel="stylesheet" href="styles.css" />
-    <script src="script.js"></script>
   </head>
   <body>
     <div class="header">
       <div class="headerTitle">Library</div>
       <div class="newBook">
         <h2 class="buttonPointer">Add new book</h2>
-        <button class="plus">+</button>
+        <button
+          onclick="document.getElementById('modal').style.display='block'"
+          class="plus"
+        >
+          +
+        </button>
       </div>
+</div>
+<div id="modal" class="modal-container" style="display: none;" >
+    <div class="modal-content">
+      <span id="close-modal" class="close">&times;</span>
+      <form id="new-book-form">
+        <h2>New Book</h2>
+        <label for="title">Title:</label>
+        <input type="text" id="title" name="title" required />
+  
+        <label for="author">Author:</label>
+        <input type="text" id="author" name="author" required />
+  
+        <label for="pages">Number of Pages:</label>
+        <input type="number" id="pages" name="pages" required />
+        <div class="readCheck">
+        <label for="read">Read:</label>
+        <input type="checkbox" id="read" name="read" />
     </div>
+        <button id="submit-btn" type="submit">Add Book</button>
+      </form>
+    </div>
+  </div>
+  </div>
+  <script src="script.js"></script>
   </body>
 </html>
